--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,9 @@ WORKDIR /api
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt && \
     adduser --disabled-password --no-create-home django-user && \
-    chown -R django-user:django-user /api && \
-    chmod -R 755 /api
+    mkdir -p /vol/web/media && \
+    mkdir -p /vol/web/static && \
+    chown -R django-user:django-user /vol && \
+    chmod -R 755 /vol
 
 USER django-user
